--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "postinstall": "remix setup node"
+    "postinstall": "remix setup node",
+    "generate-client": "PRISMA_CLIENT_ENGINE_TYPE='dataproxy' prisma generate",
+    "migrate": "cross-var DATABASE_URL=$MIGRATE_DATABASE_URL prisma migrate deploy"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
@@ -20,6 +23,7 @@
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "cross-var": "^1.1.0",
     "prisma": "^3.9.1",
     "typescript": "^4.1.2"
   },
