--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "remix dev",
     "postinstall": "remix setup node",
     "generate-client": "PRISMA_CLIENT_ENGINE_TYPE='dataproxy' prisma generate",
-    "migrate": "cross-var DATABASE_URL=$MIGRATE_DATABASE_URL prisma migrate deploy"
+    "migrate": "dotenv sh ./migrate.sh"
   },
   "dependencies": {
     "@prisma/client": "^3.9.1",
@@ -23,7 +23,6 @@
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "cross-var": "^1.1.0",
     "prisma": "^3.9.1",
     "typescript": "^4.1.2"
   },
